[NgPoland] Signals part 3

--- a/src/app/app-shell/app-shell.component.html
+++ b/src/app/app-shell/app-shell.component.html
@@ -120,8 +120,7 @@
           <ui-hamburger-button class="ui-toolbar--action" (click)="toggleSideDrawer()"></ui-hamburger-button>
           <div class="ui-toolbar--widget-container">
             <ui-search-bar
-              [ngModel]="searchValue()"
-              (ngModelChange)="setSearchValue($event)"
+              [(ngModel)]="searchValue"
             ></ui-search-bar>
             <ui-dark-mode-toggle></ui-dark-mode-toggle>
             <button
